# agda-scope

./: .gitignore  .travis.yml  Makefile  README  README.md  index.html  mainSC.agda
AST/: AgdaSyntaxAbstractName.agda  AgdaSyntaxCommon.agda  AgdaSyntaxConcrete.agda  AgdaSyntaxConcreteName.agda  AgdaSyntaxFixity.agda  AgdaSyntaxLiteral.agda  AgdaSyntaxNotation.agda  AgdaSyntaxPosition.agda  AgdaTypeCheckingPositivityOccurrence.agda  AgdaUtilsFileName.agda  DataEither.agda  DataIntSetInternal.agda  DataSequenceInternal.agda  DataSetInternal.agda  DataStrictMaybe.agda  DataTextArray.agda  DataTextInternal.agda  GHCBase.agda  GHCInt.agda  GHCIntegerType.agda  GHCPrim.agda  GHCTypes.agda  GHCWord.agda
AST/Data/: Either.agda
AST/GHC/: Maybe.agda
ASTMakerUtil/: ASTMakerTH.hs
ExtraLibs/: Library.agda
HaskellHelper/: ParseAST.hs
agda-examples/: Diamond.agda  ImportTwice.agda  ImportTwiceRenaming.agda  ImportTwiceTwoOpen.agda  ImportTwiceUsing.agda  RenamingClash.agda  RenamingOverwrite.agda
core/: AbstractToConcrete.agda  Concrete.agda  Everything.agda  Library.agda  Makefile  ModuleCalculus.cf  ParsedToConcrete.agda  Parser.agda  README.md  ScopeChecker.agda  WellScoped.agda  core.hs  mocal.agda
core/test/: Example.agda  ScopeErr.agda  Tiny.agda
micro/: Abstract.agda  Concrete.agda  Everything.agda  HierMod.cf  Library.agda  Makefile  README.md  ScopeChecker.agda  WellScoped.agda  micmod.agda  package.yaml
micro/HierMod/: AST.agda  Abs.hs  ErrM.hs  IOLib.agda  Layout.hs  Lex.hs  Lex.x  Main.agda  Par.hs  Par.y  Print.hs  (+2 more)
mutual/: .gitignore  Everything.agda  Library.agda  Makefile  Mutual.cf  ScopeChecker.agda  TypeChecker.agda  WellScoped.agda  WellTyped.agda  mut.agda  package.yaml
notes/: Makefile  agdaShadowing.md  agdaShadowing.yaml  macros.tex  modcal.tex  unicode-math-luatex.sty  unicode-math-xetex.sty  unicode-math.sty
pure/: .gitignore  CHANGELOG.md  LICENSE  Main.hs  Makefile  README.md  ScopeChecker.hs  pure.cabal
pure/HierMod/: Abs.hs  ErrM.hs  Layout.hs  Lex.hs  Lex.x  Par.hs  Par.y  Print.hs  Test.hs
pure/src/: HierMod.cf
pure/src/HierMod/: Abs.hs  ErrM.hs  Layout.hs  Lex.hs  Lex.x  Par.hs  Par.y  Print.hs  Test.hs
pure/test/: Example.agda  NotInScope.agda  ScopeErr.agda  ShadowPrivate.agda  Shadowed.agda  ShadowedByAmbiguous.agda
src/: mainSC.agda
(+40 files in other folders)
