cabal-version:      2.4
name:               pure
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Andreas Abel
maintainer:         andreas.abel@ifi.lmu.de

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

tested-with:
    GHC == 8.0.2
    GHC == 8.2.2
    GHC == 8.4.4
    GHC == 8.6.5
    GHC == 8.8.4
    GHC == 8.10.4
    GHC == 9.0.1

library
    exposed-modules:
        HierMod.Abs
        HierMod.ErrM
        HierMod.Layout
        HierMod.Lex
        HierMod.Par
        HierMod.Print
        ScopeChecker

    -- Modules included in this library but not exported.
    -- other-modules:
    other-extensions:
        CPP
        DefaultSignatures
        DeriveFunctor
        FlexibleInstances
        GeneralizedNewtypeDeriving
        LambdaCase
        MagicHash
        OverlappingInstances
        OverloadedStrings
        PatternSynonyms
        Rank2Types
        TemplateHaskell
        TupleSections
        TypeFamilies
        TypeSynonymInstances

    build-depends:
        base           >=4.9
      , array         ^>=0.5
      , containers    ^>=0.6
      , microlens     ^>=0.4
      , microlens-mtl ^>=0.2
      , microlens-th  ^>=0.4
      , mtl           ^>=2.2.2
      , pretty        ^>=1.1
      , transformers  ^>=0.5.6.2

    hs-source-dirs:     src
    build-tool-depends: alex:alex, happy:happy
    default-language:   Haskell2010

executable pure
    main-is:          Main.hs
    build-depends:    base , pure
    hs-source-dirs:   .
    default-language: Haskell2010

-- test-suite pure-test
--     default-language: Haskell2010
--     type:             exitcode-stdio-1.0
--     hs-source-dirs:   test
--     main-is:          MyLibTest.hs
--     build-depends:
--         base         ^>=4.14.1.0,
--         transformers ^>=0.5.6.2,
--         mtl          ^>=2.2.2,
--         containers   ^>=0.6.2.1,
--         pretty       ^>=1.1.3.6,
--         array        ^>=0.5.4.0
